# nature_notice

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: pyproject.toml  requirements.txt
backend/app/: initial_data.py
backend/app/core/: config.py
frontend/: .eslintignore  .eslintrc.js  Dockerfile  package-lock.json  package.json  run.sh
frontend/public/: index.html
frontend/src/: AppRoutes.tsx  index.css  index.tsx
frontend/src/__tests__/: home.test.tsx  login.test.tsx
frontend/src/admin/: authProvider.ts
frontend/src/components/: Logo.tsx  MenuItems.tsx  Navbar.tsx  SearchBar.tsx
frontend/src/components/EventCard/: EventCard.tsx
frontend/src/components/FilterBar/: FilterBar.tsx
frontend/src/components/FilterModal/: FilterModal.tsx
frontend/src/components/FiltersModal/: CostSelections.module.css  CostSelections.tsx  CurSelectionsGroup.module.css  CurSelectionsGroup.tsx  DateSelector.module.css  DateSelector.tsx  DistanceSelector.module.css  DistanceSelector.tsx  FilterBar.module.css  FilterBar.tsx  FilterHeaderContents.module.css  FilterHeaderContents.tsx  Filters.module.css  Filters.tsx  FrameComponent.module.css  FrameComponent.tsx  PortalPopup.tsx  VenueSelector.module.css  VenueSelector.tsx
frontend/src/components/Navbar/: Logo.tsx  MenuItems.tsx  Navbar.tsx  SearchBar.tsx
frontend/src/config/: index.tsx
frontend/src/pages/: Home.tsx
frontend/src/utils/: api.ts  auth.ts
frontend/src/views/: Home.tsx  index.ts
nginx/: nginx.conf
scripts/: build.sh
