[tool.poetry]
name = "nature-notice"
version = "0.1.0"
description = "Nature Notice"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "nature_notice"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2"
requests = "^2.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
